--- a/letmeask/src/components/Button/styles.scss
+++ b/letmeask/src/components/Button/styles.scss
@@ -18,6 +18,12 @@
     img {
         margin-right: 8px;
     }
+
+    &.outlined {
+        background: #fff;
+        border: solid 1px #835afd;
+        color: #835afd;
+    }
     
     &:not(:disabled):hover{
         filter: brightness(0.9);
